// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modals should be rendered correctly with many props 1`] = `
<div
  className="container modalBlocker"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    aria-label="Click to close a modal"
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    aria-modal={true}
    className="uui-modal-window root modal container"
    role="dialog"
    style={
      Object {
        "height": 300,
        "maxHeight": "var(--uui-modals-max-height)",
        "width": 300,
      }
    }
  >
    <div
      className="root modalHeader uui-modal-header borderBottom"
      style={Object {}}
    >
      <div
        className="uui-modal-title uui-typography"
      >
        Test header
      </div>
      <div
        className="flexSpacer"
      />
      <div
        className="flexCell"
        style={
          Object {
            "alignSelf": undefined,
            "flexBasis": "auto",
            "flexGrow": undefined,
            "flexShrink": 0,
            "minWidth": 0,
            "textAlign": undefined,
          }
        }
      >
        <button
          aria-label="Close modal"
          className="uui-button-box uui-enabled -clickable container uui-icon_button uui-color-neutral root"
          onClick={[Function]}
          tabIndex={0}
          type="button"
        >
          <div
            className="container uui-icon uui-enabled"
            style={Object {}}
          >
            <svg
              className=""
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="root modalFooter uui-modal-footer borderTop"
      style={Object {}}
    />
  </div>
</div>
`;

exports[`Modals should be rendered correctly with minimum props 1`] = `
<div
  className="container modalBlocker"
  style={
    Object {
      "zIndex": 1,
    }
  }
>
  <div
    aria-label="Click to close a modal"
    className="uui-modal-blocker"
    onClick={[Function]}
  />
  <div
    aria-modal={true}
    className="uui-modal-window root modal container"
    role="dialog"
    style={
      Object {
        "height": "auto",
        "maxHeight": "var(--uui-modals-max-height)",
        "width": undefined,
      }
    }
  >
    <div
      className="root modalHeader uui-modal-header"
      style={Object {}}
    />
    <div
      className="root modalFooter uui-modal-footer"
      style={Object {}}
    />
  </div>
</div>
`;
